--- a/meta-client/src/components/Header/Header.css
+++ b/meta-client/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 5px;
-  background-color: #2e304a;
+  background-color: #13393a;
   width: 100%;
   margin-bottom: 3%;
 }
