--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -1,35 +1,3 @@
-.ReactModal__Content {
-  background-color: #fff;
-}
-/* display: flex;
-border-radius: 5px;
-padding: 20px;
-max-width: 400px;
-width: 100%;
-/* position: absolute; */
-/* top: 50%; */
-/* left: 50%; */
-/* transform: translate(-50%, -50%); */
-/* z-index: 9999; */
-/* box-shadow: 0px 0px 5px rgba(229, 0, 0, 0.5); */ 
-/* } */
-h2{
-  font-size: 54px;
-  font-weight: bold;
-  color: black;
-  margin: 0 0 20px;
-}
-p{
-  text-align: left;
-  font-size: 26px;
-  color: black;
-  margin: 10px;
-}
-
-.PopUpPlotDetails p {
-  margin: 0 0 10px;
-}
-
 .PopUpPlotDetails .close-btn {
   background-color: #fff;
   border: none;
@@ -50,4 +18,8 @@ p{
   .PopUpPlotDetails {
     max-width: 300px;
   }
+}
+
+button{
+  color:rebeccapurple;
 }
