--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -1,25 +1,85 @@
-.PopUpPlotDetails .close-btn {
-  background-color: #fff;
-  border: none;
-  color: #0072ff;
-  font-size: 18px;
+.popup-content {
+  background-color: #292b2d;
+  color: #f0f0f0;
+  border-radius: 10%;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 1.9;
+  max-width: 900px;
+  margin: auto;
+}
+
+.close-btn {
+  float: right;
+  font-size: 24px;
   font-weight: bold;
+  background-color: transparent;
+  color: #f0f0f0;
+  border: none;
   cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
 }
 
-.PopUpPlotDetails .close-btn:hover {
-  text-decoration: underline;
+.close-btn:hover {
+  color: #e74c3c;
 }
 
-@media (max-width: 500px) {
-  .PopUpPlotDetails {
-    max-width: 300px;
-  }
+.popup-title {
+  font-size: 44px;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
 }
 
-button{
-  color:rebeccapurple;
+hr {
+  border-top: 1px solid #f0f0f0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.popup-text {
+  font-size: 24px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 3%;
+  text-align: left;
+}
+
+.popup-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.popup-buy-btn,
+.popup-sell-btn {
+  background-color: #2ecc71;
+  color: #f0f0f0;
+  border: none;
+  padding: 10px 20px;
+  margin-right: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.popup-buy-btn:hover,
+.popup-sell-btn:hover {
+  background-color: #27ae60;
+}
+
+.popup-buy-btn:active,
+.popup-sell-btn:active {
+  background-color: #229954;
+}
+
+.popup-sell-btn {
+  background-color: #e74c3c;
+}
+
+.popup-sell-btn:hover {
+  background-color: #c0392b;
+}
+
+.popup-sell-btn:active {
+  background-color: #96281b;
 }
