--- a/meta-client/src/components/Grid copy/Grid20.css
+++ b/meta-client/src/components/Grid copy/Grid20.css
@@ -1,9 +1,9 @@
 
-.GridMap table {
+.grid20 table {
   border-collapse: collapse;
   background-color: black;
 } 
-.GridMap{
+.grid20{
   text-align: center;
   display: grid;
   place-items: center;
