--- a/meta-client/src/components/Header/Header.css
+++ b/meta-client/src/components/Header/Header.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px;
-  background-color: #13393a;
+  padding: 10px;
+  background-color: #0077c2;
   width: 100%;
   margin-bottom: 3%;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -25,6 +26,32 @@
 }
 
 .nav-menu a {
-  color:aliceblue;
+  color: #fff;
   text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 4px;
+  position: relative;
+}
+
+.nav-menu a::before {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #fff;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 0.3s ease-in-out;
+}
+
+.nav-menu a:hover::before {
+  transform: scaleY(1);
+}
+
+.nav-menu a.active {
+  background-color: #0059b3;
 }
