--- a/meta-client/src/components/Footer/Footer.css
+++ b/meta-client/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #13393a;
+  background-color: #0059b3;
   padding: 20px;
   align-items: center;
   margin-top: 3%;
