--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -36,7 +36,7 @@
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   width: 60%;
   height: 300px;
   
@@ -51,13 +51,15 @@
 
 .popup-table th {
   text-align: center;
-  background-color: #f1f1f1;
+  background-color: #cfced1;
   font-weight: bold;
   width: 50%;
 }
 
-.popup-table td:first-child {
+.popup-table td {
   font-weight: bold;
+  background-color: #f4eded;
+  /* background-color: #a81414; */
 }
 
 .popup-table td:last-child {
@@ -72,6 +74,7 @@
   flex-wrap: wrap;
 }
 
+.popup-play-btn,
 .popup-buy-btn,
 .popup-sell-btn,
 .popup-price-btn,
@@ -88,6 +91,7 @@
   flex: 1;
 }
 
+.popup-play-btn:hover,
 .popup-buy-btn:hover,
 .popup-sell-btn:hover,
 .popup-price-btn:hover,
@@ -96,6 +100,7 @@
   filter: brightness(1.2);
 }
 
+.popup-play-btn:active,
 .popup-buy-btn:active,
 .popup-sell-btn:active,
 .popup-price-btn:active,
@@ -104,8 +109,11 @@
   filter: brightness(0.8);
 }
 
+.popup-play-btn{
+  background-color: #2ecc71 ;
+}
 .popup-buy-btn {
-  background-color: #2ecc71;
+  background-color: #2eccaa;
 }
 
 .popup-sell-btn {
