--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -1,3 +1,13 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
 .popup-content {
   font-family: Arial, sans-serif;
   max-width: 500px;
@@ -74,6 +84,8 @@
   flex-wrap: wrap;
 }
 
+.popup-back-btn,
+.popup-access-btn,
 .popup-play-btn,
 .popup-buy-btn,
 .popup-sell-btn,
@@ -91,6 +103,8 @@
   flex: 1;
 }
 
+.popup-back-btn:hover,
+.popup-access-btn:hover,
 .popup-play-btn:hover,
 .popup-buy-btn:hover,
 .popup-sell-btn:hover,
@@ -100,6 +114,8 @@
   filter: brightness(1.2);
 }
 
+.popup-back-btn:active,
+.popup-access-btn:active,
 .popup-play-btn:active,
 .popup-buy-btn:active,
 .popup-sell-btn:active,
@@ -108,12 +124,18 @@
 .popup-game-btn:active {
   filter: brightness(0.8);
 }
-
+.popup-back-btn{
+  background-color: #b4b4b4 ;
+  color: black;
+}
+.popup-access-btn{
+  background-color: #cc652e ;
+}
 .popup-play-btn{
   background-color: #2ecc71 ;
 }
 .popup-buy-btn {
-  background-color: #2eccaa;
+  background-color: #c7cc2e;
 }
 
 .popup-sell-btn {
@@ -121,8 +143,8 @@
 }
 
 .popup-price-btn {
-  background-color: #f1c40f;
-  color: #333;
+  background-color: #0ff1c4;
+
 }
 
 .popup-transfer-btn {
