--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -9,7 +9,7 @@
 }
 
 .popup-content {
-  font-family: Arial, sans-serif;
+  
   max-width: 500px;
   width: 100%;
   padding: 20px;
@@ -46,7 +46,7 @@
   border-collapse: collapse;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   width: 60%;
   height: 300px;
   
@@ -74,6 +74,14 @@
 
 .popup-table td:last-child {
   text-align: center;
+}
+
+.red-text {
+  color: red;
+}
+
+.green-text {
+  color: green;
 }
 
 .popup-buttons {
