--- a/meta-client/src/components/Map/Map.css
+++ b/meta-client/src/components/Map/Map.css
@@ -6,4 +6,10 @@
   text-align: center;
   display: grid;
   place-items: center;
+  /* background-color: #040126; */
+}
+.loading{
+  margin-top: 10%;
+  margin-bottom: 10%;
+  color: #040123;
 }
