--- a/meta-client/src/components/Footer/Footer.css
+++ b/meta-client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: 50px;
+  margin-top: 3%;
   margin-bottom: 0px;
   bottom: 0;
   width: 100%;
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #0077c2;
+  background-color: #06072b;
 }
 
 .social-media {
@@ -36,8 +36,9 @@
   transform: scale(1.2);
 }
 
-.copyight {
-  margin-right: 10px;
-  color: #333;
-  font-size: 16px;
+.copyright {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
 }
