style entry page

--- a/meta-client/src/components/EnteryPage/EnteryPage.css
+++ b/meta-client/src/components/EnteryPage/EnteryPage.css
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 .entry-page__title {
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 44px;
+  margin-bottom: 60px;
   text-align: center;
 }
 
@@ -14,26 +16,34 @@
   display: flex;
 }
 
-.entry-page__button {
-  background-color: #f0f0f0;
+.buyer-seller-button,
+.guest-button {
+  color: #ffff;
+  background-color: #21a292;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
-  margin-right: 10px;
-  font-size: 16px;
+  /* margin-right: 10px; */
+  font-size: 26px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
-.entry-page__button:hover {
-  background-color: #d5d5d5;
+
+.buyer-seller-button{
+  margin-left: 40px;
+  
 }
 
-.entry-page__button--selected {
-  background-color: #2ecc71;
-  color: #f0f0f0;
+
+.buyer-seller-button:hover,
+.guest-button:hover {
+  filter: brightness(1.7);
+  transform: scale(1.2);
 }
 
-.entry-page__button--selected:hover {
-  background-color: #27ae60;
+
+.buyer-seller-button:active,
+.guest-button:active {
+  filter: brightness(0.8);
 }
