--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -119,6 +119,7 @@
   flex: 1;
 }
 
+.attach-game-div button:hover ,
 .popup-back-btn:hover,
 .popup-access-btn:hover,
 .popup-play-btn:hover,
@@ -130,6 +131,8 @@
   filter: brightness(1.2);
 }
 
+
+.attach-game-div button:active ,
 .popup-back-btn:active,
 .popup-access-btn:active,
 .popup-play-btn:active,
@@ -177,30 +180,62 @@
   }
 }
 
-
-.game-input {
-  display: flex;
+.sell-div,
+.attach-game-div{
+  padding-to:0px;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  display: flex; 
+  margin-right: 10%;
+ 
+}
+.set-price-input,
+.game-input {
+  margin-right: 2%;
 }
 
-.game-input input[type="text"] {
+
+.attach-game-div input[type="text"] {
   padding: 10px;
-  border: none;
   border-radius: 4px;
+  border-color:#9b59b6;
+  background-color: #d3c6d8;
   font-size: 16px;
-  margin-right: 10px;
-  flex: 1;
+  
 }
 
-.game-input button {
-  padding: 10px 20px;
+.sell-div input[type="number"] {
+  padding: 10px;
+  border-radius: 4px;
+  border-color:#3498db;
+  background-color: #a8cae0;
+  font-size: 16px;
+  
+}
+
+
+.attach-game-div button {
+  padding: 10px 10px;
+  /* margin-right: 50px; */
   border: none;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 19px;
   font-weight: bold;
   cursor: pointer;
+  padding-right: 10px;
   color: #fff;
   background-color: #9b59b6;
+}
+
+.sell-div button{
+  padding: 10px 10px;
+  /* margin-right: 50px; */
+  border: none;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  padding-right: 10px;
+  color: #fff;
+  background-color: #3498db;
 }
