sell auth and functionality maybe

--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -148,7 +148,7 @@
   color: black;
 }
 .popup-access-btn{
-  background-color: #cc652e ;
+  background-color: #c451af ;
 }
 .popup-play-btn{
   background-color: #2ecc71 ;
