--- a/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
+++ b/meta-client/src/components/PlotDetails/PopUpPlotDetails.css
@@ -57,6 +57,8 @@
   border-bottom: 1px solid #ddd;
   text-align: center;
   font-size: 18px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 .popup-table th {
