--- a/meta-client/src/components/EnteryPage/EnteryPage.css
+++ b/meta-client/src/components/EnteryPage/EnteryPage.css
@@ -2,12 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10%;
+  margin-top: 2%;
   margin-bottom: 10%;
 }
 
-.entry-page__title {
+.entry-h1 {
   font-size: 44px;
+  margin-bottom: 5%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.entry-h2 {
+  font-size: 34px;
   margin-bottom: 60px;
   text-align: center;
 }
