--- a/meta-client/src/components/Header/Header.css
+++ b/meta-client/src/components/Header/Header.css
@@ -18,16 +18,17 @@
   margin-right :1%;
 }
 
-p{
+.header p{
   color: #21a292;
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
   position: absolute;
   left: 50%;
+  right:40%;
   transform: translateX(-50%);
   margin-top: 22px;
-  max-width: calc(50% - 190px);
+  max-width: calc(50% - 100%);
 }
 
 .nav-menu {
